src/test/deca/syntax/invalid/AvecObjet/ThisDotThis.deca
//Description
//  test d'un this.this
//
//Réponse
//  Erreur syntaxique ligne 11
//  mismatched input 'this' expecting IDENT

class A {
    A a;
    int getx() {
        this.this = new A();
    }
}